// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertiesPage Integration Snapshots should match snapshot with default parameters 1`] = `
<main>
  <nav
    data-breadcrumb-count="2"
    data-testid="breadcrumbs"
  >
    <span>
      Home
    </span>
    <span
      data-active="true"
    >
      Properties
    </span>
  </nav>
  <div
    data-testid="properties-filter-form"
  >
    PropertiesFilterForm Component
  </div>
  <div
    data-current-page="1"
    data-query-term="(?:)"
    data-testid="properties-list"
    data-viewport-width="1200"
  >
    PropertiesList Component
  </div>
  <div
    class="mt-5 flex w-full justify-center"
  >
    <div
      data-current-page="1"
      data-testid="properties-pagination"
      data-total-pages="5"
    >
      PropertiesPagination Component
    </div>
  </div>
</main>
`;

exports[`PropertiesPage Integration Snapshots should match snapshot with no pagination 1`] = `
<main>
  <nav
    data-breadcrumb-count="2"
    data-testid="breadcrumbs"
  >
    <span>
      Home
    </span>
    <span
      data-active="true"
    >
      Properties
    </span>
  </nav>
  <div
    data-testid="properties-filter-form"
  >
    PropertiesFilterForm Component
  </div>
  <div
    data-current-page="1"
    data-query-term="(?:)"
    data-testid="properties-list"
    data-viewport-width="1200"
  >
    PropertiesList Component
  </div>
</main>
`;

exports[`PropertiesPage Integration Snapshots should match snapshot with search query 1`] = `
<main>
  <nav
    data-breadcrumb-count="2"
    data-testid="breadcrumbs"
  >
    <span>
      Home
    </span>
    <span
      data-active="true"
    >
      Properties
    </span>
  </nav>
  <div
    data-testid="properties-filter-form"
  >
    PropertiesFilterForm Component
  </div>
  <div
    data-current-page="2"
    data-query-term="luxury apartment"
    data-testid="properties-list"
    data-viewport-width="1200"
  >
    PropertiesList Component
  </div>
  <div
    class="mt-5 flex w-full justify-center"
  >
    <div
      data-current-page="2"
      data-testid="properties-pagination"
      data-total-pages="5"
    >
      PropertiesPagination Component
    </div>
  </div>
</main>
`;
